--- a/src/containers/ItemGrid.css
+++ b/src/containers/ItemGrid.css
@@ -1,6 +1,7 @@
-.content {
+section {
   display:flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
