--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -5,8 +5,8 @@ footer {
   align-items: center;
   width: 100%;
   height: 200px;
-  background-color: orange;
+  background-color: white;
   font-size: 1.2em;
-  color:white;
+  color:black;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
