--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,13 +1,16 @@
 header {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  background-color: darkorange;
+  background-color: white;
   width: 100%;
-  height: 200px;
-  color:white;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+  height: 77px;
+  color:black;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  border-bottom: 1px solid rgba(0,0,0,.0975);
+  position: fixed;
+  top: 0;
 }
 header nav ul {
   list-style: none;
@@ -17,7 +20,7 @@ header nav ul {
 }
 
 .link {
-  color: white;
+  color: black;
   text-decoration: none;
   margin:2em;
   font-size: 1.5em;
