--- a/src/containers/ItemGrid.css
+++ b/src/containers/ItemGrid.css
@@ -4,8 +4,8 @@
   align-items: center;
   flex-direction: row;
   flex-wrap: wrap;
-  padding: 3em 0;
-  max-width: 80%
+  padding: 0;
+  max-width: 100%
 }
 
 img {
