--- a/src/components/UserProfile/style.css
+++ b/src/components/UserProfile/style.css
@@ -4,7 +4,7 @@
   justify-content: flex-start;
   align-items: center;
   padding-top: 5em;
-  width: 70%;
+  width: 90%;
 
 }
 
@@ -31,11 +31,7 @@
   
 }
 
-.info div p span {
-  font-weight: 600;
-}
-
-.name {
+.info div p span, .name {
   font-weight: 600;
 }
 
