minor some added styling and add fetching of more details on media objects

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -3,7 +3,7 @@ footer {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 100vw;
   height: 200px;
   background-color: white;
   font-size: 1.2em;
