--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -4,13 +4,14 @@ header {
   justify-content: center;
   align-items: center;
   background-color: white;
-  width: 100%;
+  width: 100vw;
   height: 77px;
   color:black;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   border-bottom: 1px solid rgba(0,0,0,.0975);
-  position: fixed;
+  position: sticky;
   top: 0;
+  margin-bottom:4em;
 }
 header nav ul {
   list-style: none;
@@ -25,4 +26,64 @@ header nav ul {
   margin:2em;
   font-size: 1.5em;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
+.loginModal {
+  z-index: 2;
+  position: fixed;
+  top: 200px;
+  margin: auto auto;
+  background-color: white;
+  padding: 5em 8em;
+  border: 1px solid #dbdbdb;
+}
+.registerLink {
+  cursor: pointer;
+  color:#b4daff;
+}
+.userButton {
+  background: none;
+  border: none;
+  -webkit-appearance: none;
+  outline: none;
+  padding: 0.9em;
+  cursor: pointer;
+  background-image: url(./user.svg);
+}
+
+.loginForm {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.loginForm input {
+  background: none;
+  border: 1px solid #dbdbdb;
+  -webkit-appearance: none;
+  outline: none;
+  width: 100%;
+  background-color: rgb(250,250,250);
+  margin: 1em 0;
+  padding: 1em 0;
+  text-align: center;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  border-radius: 3px;
+}
+
+.loginForm button {
+  background: none;
+  border: 1px solid #dbdbdb;
+  -webkit-appearance: none;
+  outline: none;
+  background-color: rgb(250,250,250);
+  margin: 1em 0;
+  padding: 0.5em 0;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  cursor: pointer;
+  background-color: #3897f0;
+  width: 100%;
+  color:white;
+  border-radius: 3px;
 }
