--- a/src/components/UserProfile/style.css
+++ b/src/components/UserProfile/style.css
@@ -1,11 +1,11 @@
 .userProfile {
+  box-sizing: border-box;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   padding-top: 5em;
   width: 90%;
-
 }
 
 .info {
@@ -31,7 +31,7 @@
   
 }
 
-.info div p span, .name {
+.bold {
   font-weight: 600;
 }
 
@@ -43,13 +43,15 @@
   margin-right:0.5em;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   padding: 0.5em 1em;
+  cursor: pointer;
 }
 
 .btn-mobile-settings {
   background:none;
   border: none;
-  background-image:url(./settings-icon.svg);
+  background-image: url(./settings-icon.svg);
   padding: 1em;
+  cursor: pointer;
 }
 
 .profile-img-container {
