--- a/src/components/UserProfile/style.css
+++ b/src/components/UserProfile/style.css
@@ -4,7 +4,6 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  padding-top: 5em;
   width: 90%;
 }
 
@@ -56,11 +55,18 @@
 
 .profile-img-container {
   margin-right:8em;
+  width: 150px;
+  height: 150px;
+  margin-bottom: 5em;
+  
 }
 .profile-img {
   width:100%;
+  height: 100%;
   border-radius: 100%;
   border: 0 solid #000;
   border-image-width: 1;
+
+
 }
 
