--- a/src/components/MediaItem/style.css
+++ b/src/components/MediaItem/style.css
@@ -67,7 +67,7 @@
   overflow: hidden;
 }
 
-.commentForm button {
+.submitButton {
   background: none;
   border: none;
   color:#b4daff;
@@ -75,50 +75,23 @@
   outline: none;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin-right: 0.5em;
-}
-
-.likeButton {
-  background: none;
-  border: none;
-  -webkit-appearance: none;
-  outline: none;
-  padding: 0.9em;
-  height:1.5em;
-  width:1.5em;
-  color: black;
   cursor: pointer;
 }
 
 .likeButton {
+  color: black;
+  stroke: black;
+  cursor: pointer;
+}
 
- margin-right: 1em;
- 
-}
-.likeButton svg {
-  pointer-events:none;
-  z-index: 2;
-}
 .liked {
   fill: red;
   stroke: red;
 }
+
 .imgButtons {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
-}
-.comments button{
-  background: none;
-  border: none;
-  -webkit-appearance: none;
-  outline: none; 
-  cursor: pointer;
-  color: red;
-  font-size: 1.1em;
-}
-.comments {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
 }
