--- a/src/components/MediaItem/style.css
+++ b/src/components/MediaItem/style.css
@@ -6,12 +6,20 @@
   display: flex;
   flex-shrink: 0.5;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   height: 60px;
   background: white;
   padding: 0.5em 0;
   max-width: 640px;
+}
+.profileBanner > div {
+  display: flex;
+  flex-shrink: 0.5;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100%;
 }
 
 .profileBanner img {
@@ -94,4 +102,33 @@
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
+}
+
+.followButton {
+  background: none;
+  border: none;
+  -webkit-appearance: none;
+  outline: none;
+  height: 2em;
+  width: 2.5em;
+  margin-right: 1em;
+  background-image: url(./follow.svg);
+  background-position: center;
+  background-size: cover;
+  cursor: pointer;
+  
+}
+
+.unFollowButton {
+  background: none;
+  border: none;
+  -webkit-appearance: none;
+  outline: none;
+  height: 2em;
+  width: 2.5em;
+  background-image: url(./unfollow.svg);
+  margin-right: 1em;
+  background-position: center;
+  background-size: cover;
+  cursor: pointer;
 }
