create func for geting other users profiles pluss redirection 	bugfixes
	* add backend routs for fethcing specific users mediaitems and
	  profileinfo
	* add func in frontend code to store fetched users
	* add route for specific users
	* fix redirection when loggedin also fixed rerendering when
	  logged in

--- a/src/components/MediaItem/style.css
+++ b/src/components/MediaItem/style.css
@@ -13,7 +13,7 @@
   padding: 0.5em 0;
   max-width: 640px;
 }
-.profileBanner > div {
+.profileBanner > a > div {
   display: flex;
   flex-shrink: 0.5;
   flex-direction: row;
