--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,18 @@
   background-color: #fafafa;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+button,input {
+  background: none;
+  border: none;
+  -webkit-appearance: none;
+  outline: none;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+button {
+  cursor: pointer;
+}
+
+li {
+  list-style: none;
+}
