restructure storage of icons and fix bug where user could only remov and edit comments made on own mediaitem

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -48,7 +48,7 @@ header nav ul {
   outline: none;
   padding: 0.9em;
   cursor: pointer;
-  background-image: url(./user.svg);
+  background-image: url(../../resources/icons/user.svg);
 }
 
 .loginForm {
