--- a/src/components/ItemComment/style.css
+++ b/src/components/ItemComment/style.css
@@ -1,7 +1,3 @@
-.comments button {
-
-}
-
 .removeButton {
   background: none;
   border: none;
@@ -10,7 +6,7 @@
   cursor: pointer;
   color: black;
   padding: 1em;
-  background-image: url(./delete.svg);
+  background-image: url(../../resources/icons/delete.svg);
 }
 .comments {
   display: flex;
@@ -48,7 +44,7 @@
   outline: none; 
   cursor: pointer;
   color: black;
-  background-image: url(./options.png);
+  background-image: url(../../resources/icons/options.png);
   padding: 1em;
   margin-right:0.5em;
 }
