--- a/src/components/MediaItem/style.css
+++ b/src/components/MediaItem/style.css
@@ -13,15 +13,22 @@
   padding: 0.5em 0;
   max-width: 640px;
 }
-.profileBanner > a > div {
+.profileBanner .userLink {
+  color:black;
+  text-decoration: none;
+}
+.profileBanner .userLink > div {
   display: flex;
   flex-shrink: 0.5;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   height: 100%;
+  margin-left: 0.5em;
 }
-
+.profileBanner .userLink > div > div > p {
+ margin: 0.25em 1em;
+}
 .profileBanner img {
   border-radius: 100%;
   height: 50px;
@@ -113,7 +120,7 @@
   height: 2em;
   width: 2.5em;
   margin-right: 1em;
-  background-image: url(./follow.svg);
+  background-image: url(../../resources/icons/follow.svg);
   background-position: center;
   background-size: cover;
   cursor: pointer;
@@ -127,7 +134,7 @@
   outline: none;
   height: 2em;
   width: 2.5em;
-  background-image: url(./unfollow.svg);
+  background-image: url(../../resources/icons/unfollow.svg);
   margin-right: 1em;
   background-position: center;
   background-size: cover;
