--- a/src/components/UserProfile/style.css
+++ b/src/components/UserProfile/style.css
@@ -27,14 +27,12 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 2em;
   font-weight: 200;
-  
 }
 
 .bold {
   font-weight: 600;
   color: black;
   text-decoration: none;
-
 }
 
 .btn-settings {
@@ -61,15 +59,18 @@
   width: 150px;
   height: 150px;
   margin-bottom: 5em;
-  
+  border-radius: 100%;
+  background-color: white;
 }
+
 .profile-img {
   width:100%;
   height: 100%;
   border-radius: 100%;
   border: 0 solid #000;
   border-image-width: 1;
-
-
 }
 
+.userStats p {
+  margin: 0 0.5em;
+}
