--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,10 +1,14 @@
 footer {
+  z-index: -1;
+  position: relative;
+  bottom:0;
+  box-sizing: border-box;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 100vw;
-  height: 200px;
+  width: 100%;
+  height: 100px;
   background-color: white;
   font-size: 1.2em;
   color:black;
