--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,10 +1,11 @@
 header {
+  box-sizing: border-box;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   background-color: white;
-  width: 100vw;
+  width: 100%;
   height: 77px;
   color:black;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -31,20 +32,37 @@ header nav ul {
 .loginModal {
   z-index: 2;
   position: fixed;
-  top: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  top: 77px;
+  width:100%;
+  height: 100vh;
   margin: auto auto;
+  padding:1em;
   background-color: white;
-  padding: 5em 8em;
   border: 1px solid #dbdbdb;
 }
-.loginModal > button{
- border: 1px solid #dbdbdb;
- background-color: rgb(250,250,250);
- border-radius: 4px;
- padding: 1em;
- width: 8em;
+.loginModal ul {
+  padding: 0;
 
 }
+
+.loginModal ul li {
+  color: black;
+  text-decoration: none;
+  margin-top: 1em;
+  
+  font-size: 1.5em;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+.loginModal ul li button {
+  margin:0 2em;
+  font-size: 1.5em;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
 .registerLink {
   cursor: pointer;
   color:#b4daff;
@@ -54,6 +72,7 @@ header nav ul {
   border: none;
   -webkit-appearance: none;
   outline: none;
+  margin-left:1em;
   padding: 0.9em;
   cursor: pointer;
   background-image: url(../../resources/icons/user.svg);
@@ -64,6 +83,9 @@ header nav ul {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 90%;
+  max-width: 660px;
+  padding-top:2em;
 }
 
 .loginForm input {
@@ -94,4 +116,10 @@ header nav ul {
   width: 100%;
   color:white;
   border-radius: 3px;
+}
+
+@media only screen and (max-width: 980px) {
+  nav .link {
+    display: none;
+  }
 }
