--- a/src/components/MediaItem/style.css
+++ b/src/components/MediaItem/style.css
@@ -52,7 +52,7 @@
   background: white;
   padding: 1em 1em;
   margin: 0;
-  max-width: 640px;
+  max-width: 560px;
   height: auto;
   flex-wrap: wrap;
   overflow: hidden;
@@ -146,24 +146,54 @@
 
 .editMediaItemModal {
   z-index: 2;
-  position: fixed;
-  top: 100px;
-  left: 20vw;
-  margin: auto auto;
-  background-color: white;
-  padding: 5em 6em;
+  position: absolute;
+  top:77px;
+  left:0;
+  width:100%;
+  height: 100%;
+  background-color: rgba(255,255,255,0.95);
+  padding: 1em 0;
   border: 1px solid #dbdbdb;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  
 }
 .editMediaItemModal > div {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 .editMediaItemModal > div > div {
  margin: 0 2em;
+}
+
+.updateImageForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 1em 0;
+  width:90%;
+  max-width: 660px;
+}
+
+.updateImageForm button {
+  padding:1em;
+  color: white;
+  border-radius: 4px;
+  margin-top:0.5em;
+  width: 100%
+}
+
+.updateImageForm input {
+  padding:1em;
+  border: 1px solid #b4daff;
+  background-color: white;
+  border-radius: 4px;
+  margin: 0.5em 0;
+  width:100%;
 }
