--- a/src/components/SettingsModal/style.css
+++ b/src/components/SettingsModal/style.css
@@ -49,6 +49,8 @@
 .changeProfileImage {
     height: 150px;
     width: 150px;
+    min-width: 150px;
+    min-height: 150px;
     border-radius: 100%;
     display: flex;
     justify-content: center;
